# UnicycleMotionControl

./: .gitignore  CMakeLists.txt  README.md
include/UnicycleMotionControl/: ApproximateLinearizationController.hpp  BackAndForthTrajectory.hpp  CircularTrajectory.hpp  CircularTrajectoryWithNonConstantVelocity.hpp  CoppeliaSimController.hpp  CoppeliaSimP3DXController.hpp  DifferentialWheeledRobotCommand.hpp  DynamicFeedbackLinearizationController.hpp  EightShapedTrajectory.hpp  LinearTrajectoryWithConstantDrivingVelocity.hpp  SquaredTrajectoryWithConstantDrivingVelocity.hpp  StaticFeedbackLinearizationController.hpp  UnicycleCommand.hpp  (+6 more)
matlab/: ApproximateLinearizationController.m  CircularTrajectory.m  ControllerType.m  DynamicFeedbackLinearizationController.m  EightShapedTrajectory.m  SquaredTrajectory.m  StaticFeedbackLinearizationController.m  TrajectoryType.m  UnicycleMotionControl.m  draw_unicycle_from_trajectory.m  simulate_unicycle_motion.m
scenes/: P3DX.ttt
scripts/: plot_data.py
src/: ApproximateLinearizationController.cpp  BackAndForthTrajectory.cpp  CircularTrajectory.cpp  CircularTrajectoryWithNonConstantVelocity.cpp  CoppeliaSimP3DXController.cpp  DifferentialWheeledRobotCommand.cpp  DynamicFeedbackLinearizationController.cpp  EightShapedTrajectory.cpp  LinearTrajectoryWithConstantDrivingVelocity.cpp  SquaredTrajectoryWithConstantDrivingVelocity.cpp  StaticFeedbackLinearizationController.cpp  UnicycleCommand.cpp  UnicycleConfiguration.cpp  UnicycleTrajectory.cpp  simExtPluginUnicycleMotionControl.cpp  simLib.cpp  types.cpp  unicycle_controllers.cpp
